# palindrome

./: .gitignore  README.md  main.py  pyproject.toml
palindrome/: palindrome.py
tests/: palidromo_test.py
