[tool.poetry]
name = "palindromo"
version = "0.1.0"
description = "palindrome"
authors = ["marmorear <52580594+marmorear@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
